@@ -36,6 +36,7 @@ namespace lsp
                 sConstraints.bind("size.constraints", this);
                 sBorder.bind("border.size", this);
                 sBorderRadius.bind("border.radius", this);
+                sBorderFlat.bind("border.flat", this);
                 sGlass.bind("glass.visibility", this);
                 sColor.bind("color", this);
                 sBorderColor.bind("border.color", this);
@@ -46,6 +47,7 @@ namespace lsp
                 sConstraints.set_all(-1);
                 sBorder.set(4);
                 sBorderRadius.set(12);
+                sBorderFlat.set(false);
                 sGlass.set(true);
                 sColor.set("#000000");
                 sBorderColor.set("#000000");
@@ -63,6 +65,7 @@ namespace lsp
             sConstraints(&sProperties),
             sBorder(&sProperties),
             sBorderRadius(&sProperties),
+            sBorderFlat(&sProperties),
             sGlass(&sProperties),
             sColor(&sProperties),
             sBorderColor(&sProperties),
@@ -140,24 +143,12 @@ namespace lsp
             sConstraints.bind("size.constraints", &sStyle);
             sBorder.bind("border.size", &sStyle);
             sBorderRadius.bind("border.radius", &sStyle);
+            sBorderFlat.bind("border.flat", &sStyle);
             sGlass.bind("glass.visibility", &sStyle);
             sColor.bind("color", &sStyle);
             sBorderColor.bind("border.color", &sStyle);
             sGlassColor.bind("glass.color", &sStyle);
             sIPadding.bind("padding.internal", &sStyle);
-
-//            Style *sclass = style_class();
-//            if (sclass != NULL)
-//            {
-//                sConstraints.init(sclass);
-//                sBorder.init(sclass, 4);
-//                sBorderRadius.init(sclass, 12);
-//                sGlass.init(sclass, true);
-//                sColor.init(sclass, "#000000");
-//                sBorderColor.init(sclass, "#000000");
-//                sGlassColor.init(sclass, "#ffffff");
-//                sIPadding.init(sclass, 1);
-//            }
 
             return STATUS_OK;
         }
@@ -172,12 +163,17 @@ namespace lsp
                 query_resize();
             if (sBorderRadius.is(prop))
                 query_resize();
+            if (sBorderFlat.is(prop))
+                query_draw();
             if (sGlass.is(prop))
                 query_draw();
             if (sColor.is(prop))
                 query_draw();
             if (sBorderColor.is(prop))
+            {
+                drop_glass();
                 query_draw();
+            }
             if (sGlassColor.is(prop))
                 query_draw();
             if (sIPadding.is(prop))
@@ -278,16 +274,18 @@ namespace lsp
 
                 // Draw the glass and the border
                 color.copy(sGlassColor);
-                bg_color.copy(sColor);
+                bg_color.copy(sBorderColor);
                 color.scale_lightness(bright);
                 bg_color.scale_lightness(bright);
+
+                bool flat = sBorderFlat.get();
 
                 if (sGlass.get())
                 {
                     cv = create_border_glass(&pGlass, s,
                             color, bg_color,
                             SURFMASK_ALL_CORNER, bw, xr,
-                            sSize.nWidth, sSize.nHeight
+                            sSize.nWidth, sSize.nHeight, flat
                         );
                     if (cv != NULL)
                         s->draw(cv, sSize.nLeft, sSize.nTop);
@@ -295,7 +293,7 @@ namespace lsp
                 else
                 {
                     drop_glass();
-                    draw_border(s, bg_color, SURFMASK_ALL_CORNER, bw, xr, &sSize);
+                    draw_border(s, bg_color, SURFMASK_ALL_CORNER, bw, xr, &sSize, flat);
                 }
 
                 s->set_antialiasing(aa);
